--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-web = "4"
+figment = { version = "0.10.19", features = ["env", "toml"] }
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.140"
