--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 actix-web = "4"
 figment = { version = "0.10.19", features = ["env", "toml"] }
+reqwest = "0.12.24"
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
