--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4"
+chrono = "0.4.42"
 figment = { version = "0.10.19", features = ["env", "toml"] }
-reqwest = "0.12.24"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
