--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 actix-web = "4"
 chrono = "0.4.42"
 figment = { version = "0.10.19", features = ["env", "toml"] }
+once_cell = "1.21.3"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.140"
